Fix Bug 692584. Fix wrong sprintf format specifier types. Thanks to Arthur Ford.